# alumulemu

./: .dockerignore  .env.example  .gitignore  Cargo.toml  Dockerfile  README.md  build.rs  build.sh  debug_log.txt  docker-compose.yml  docker-compose.yml.example  pnpm-lock.yaml  pnpm-workspace.yaml
.github/workflows/: docker-publish.yml
alu-panel/: README.md  index.html  package.json  pnpm-lock.yaml  rsbuild.config.js  rsbuild.config.ts  tailwind.config.ts  tsconfig.json  vite.config.js
alu-panel/src/: App.vue  env.d.ts  shims-vue.d.ts  title.ts  util.js  util.ts
alu-panel/src/assets/: main.css
alu-panel/src/components/: AluButton.vue  DownloadList.vue  ErrorDisplay.vue  GameTitleButton.vue  GamesList.vue  MetadataList.vue  TitleDBList.vue  UserManagement.vue
alu-panel/src/components/alu/: AgeRating.vue  AluList.vue  AluListRow.vue
alu-panel/src/router/: index.js  index.ts
alu-panel/src/utils/: download.ts  import.ts  title.ts
alu-panel/src/views/: DownloadView.vue  GamesView.vue  MetadataView.vue  TitleDBView.vue  UsersView.vue
src/: build.rs  config.rs  db.rs  index.rs  main.rs  nsp.rs  nst.rs  router.rs  titledb.rs  util.rs  zeld.json
src/backend/: admin.rs  kv_config.rs  mod.rs  router.rs  user.rs
src/backend/api/: config.rs  dl.rs  downloader.rs  metadata.rs  mod.rs
src/import/: dbi.rs  downloader.rs  import_utils.rs  mod.rs  not_ultranx.rs  registry.rs  url.rs
src/import/downloader/: http.rs  mod.rs  models.rs  queue.rs
src/surql/: metadb_view.surql  tables.surql  titledb.surql  user.surql  util.surql
templates/: dbi.html
webui/: games.html  index.html  users.html
webui/js/: games.js  users.js
