[package]
name = "alumulemu"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.8.1"
serde = "1.0.219"
serde_json = "1.0.140"
surrealdb = { version = "2.2.1", features = ["kv-rocksdb"] }
tokio = { version = "1.44.0", features = ["full"] }
tokio-util = { version = "0.7.13", features = ["io"] }
tower-http = { version = "0.6.2", features = ["trace"] }
tracing = { version = "0.1.41", features = ["log", "async-await"] }
tracing-subscriber = { version = "0.3.19", features = ["env-filter", "chrono", "serde_json"] }
tower = "0.5.2"
thiserror = "2.0.12"
color-eyre = "0.6"
regex = "1"