[package]
name = "alumulemu"
version = "0.1.2"
edition = "2024"
license = "AGPL-3.0"
authors = [
    "Cappy Ishihara <cappy@cappuchino.xyz>",
    "Eri Ishihara <eri@nijika.dev>",
]
description = "Nintendo Horizon repository manager"
repository = "https://github.com/RyouVC/alumulemu"
readme = "README.md"
keywords = ["nintendo", "switch", "horizon", "repository", "manager"]

[profile.release]
lto = true
strip = true
opt-level = 3
panic = 'abort'
codegen-units = 1

[dependencies]
axum = "0.8.1"
serde = "1.0.219"
serde_json = "1.0.140"
# We'll support both RocksDB, SurrealKV, and TiKV
# might cause binary bloat but its fiiine
surrealdb = { version = "2.2.1", features = ["kv-rocksdb", "kv-surrealkv", "kv-tikv"] }
tokio = { version = "1.44.0", features = ["full"] }
tokio-util = { version = "0.7.13", features = ["io"] }
tower-http = { version = "0.6.2", features = ["trace", "fs"] }
tracing = { version = "0.1.41", features = ["log", "async-await"] }
tracing-subscriber = { version = "0.3.19", features = [
    "env-filter",
    "chrono",
    "serde_json",
] }
tower = "0.5.2"
thiserror = "2.0.12"
color-eyre = "0.6"
regex = "1"
chrono = "0.4.40"
struson = { version = "0.6.0", features = ["serde"] }
binrw = "0.14.1"
jwalk = "0.8.1"
reqwest = { version = "0.12.14", features = ["cookies", "json", "rustls-tls", "stream"] }
futures-util = "0.3.31"
base64 = "0.22.1"
http = "1.3.1"
sha256 = "1.6.0"
argon2 = "0.5.3"
structconf = "0.5.0"
clap = { version = "4.5.32", features = ["derive", "env"] }
dotenvy = { version = "0.15.7", features = ["clap", "cli"] }
mime_guess = "2.0.5"
cron = { version = "0.15.0", features = ["serde"] }
nx-archive = "0.1.1"
once_cell = "1.21.1"
futures = "0.3.31"
notify = "6.1.1" # For filesystem monitoring
dirs = "6.0.0"
scraper = { version = "0.23.1", features = ["serde"] }
tempfile = "3.19.1"
async_zip = { version = "0.0.17", features = ["full"] }
ulid = { version = "1.2.1", features = ["serde"] }
urlencoding = "2.1.3"
url = { version = "2.5.4", features = ["serde"] }
